<resources>
    <string name="app_name">Ride Share</string>

    <string name="name_prompt">Enter full name</string>

    <string name="car">Car</string>

    <string name="no_car">No Car</string>

    <string name="car_seats">Number of Seats Available</string>

    <string name="radius">Pickup Radius</string>

    <string name="class_start">First Class Start Time</string>

    <string name="class_end">Last Class End Time</string>

    <string name="email">Email</string>

    <string name="password">Password</string>

    <string name="re_password">Re-Enter Password</string>

    <string name="button_name">Submit</string>

    <string name="login">Login</string>

    <string name="register">Register</string>

    <string name="new_account">Need an account?</string>


    <string name="second_page">By the way, you did an excellent job clicking that button. Are you a professional button-clicker?</string>
</resources>
