<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >
    <RelativeLayout

        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.jacobjackson.helloworld.MainActivity"
        android:clickable="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/editText1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/name_prompt" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText1"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">
            <RadioButton
                android:text="@string/car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/radioButton5" />

            <RadioButton
                android:text="@string/no_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/radioButton5"
                android:layout_toRightOf="@+id/radioButton5"
                android:layout_toEndOf="@+id/radioButton5"
                android:layout_marginLeft="45dp"
                android:layout_marginStart="45dp"
                android:id="@+id/radioButton6" />
        </RadioGroup>


        <Button
            android:text="@string/button_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/button" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="11"
            android:id="@+id/editText14"
            android:visibility="invisible"
            android:hint="@string/car_seats"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_below="@+id/editText14"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/editText15"
            android:visibility="invisible"
            android:hint="@string/radius" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText16"
            android:hint="@string/class_start"
            android:layout_below="@+id/editText15"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="text"
            android:focusable="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editText17"
            android:hint="@string/class_end"
            android:layout_below="@+id/editText16"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:focusable="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText21"
            android:hint="Enter Address"
            android:layout_below="@+id/editText17"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText18"
            android:hint="@string/email"
            android:layout_below="@+id/editText21"
            android:layout_alignRight="@+id/radioGroup"
            android:layout_alignEnd="@+id/radioGroup" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText19"
            android:hint="@string/password"
            android:layout_below="@+id/editText18"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText20"
            android:hint="@string/re_password"
            android:layout_below="@+id/editText19"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>
</ScrollView>
